# personal-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
skills/aliyun-asr/: README.md  SKILL.md
skills/aliyun-asr/references/: aliyun-doc.md
skills/aliyun-asr/scripts/: aliyun_asr.py  pyproject.toml  requirements.txt
skills/baoyu-infographic/: SKILL.md
skills/brainstorming/: SKILL.md
skills/brainstorming/references/: design.template.md  proposal.template.md
skills/executing-plans/: SKILL.md
skills/html-to-mui-react/: SKILL.md
skills/html-to-mui-react/references/: scaffold-templates.md
skills/k8s-troubleshoot/: SKILL.md
skills/k8s-troubleshoot/references/: clusters.md  flowchart-detail.md
skills/learning-notes-builder/: SKILL.md
skills/learning-notes-builder/scripts/: scan_sources.py
skills/learning-roadmap/: SKILL.md
skills/learning-roadmap/scripts/: build_roadmap.py
skills/playwright-e2e-debug-report/: SKILL.md
skills/playwright-e2e-debug-report/agents/: openai.yaml
skills/playwright-e2e-debug-report/references/: report.template.md  test-task.template.md
skills/project-init/: SKILL.md
skills/project-init/references/: go_agent.md  go_backend.md  python_agent.md  python_backend.md
skills/requesting-code-review/: SKILL.md  plan-scorecard-reviewer.md
skills/stack-selector/: SKILL.md
skills/stack-selector/references/: stack-matrix.md  stack-selection.template.md
skills/subagent-driven-development/: SKILL.md
skills/writing-plans/: SKILL.md
skills/writing-plans/references/: tasks.template.md
